--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,15 +1,121 @@
 /* header-footer */
 @media(max-width:1024.98px){
-   
+    /* header */
+    .logo{
+        transform: scale(0.5);
+    }
+    /* footer */
+    .footer p{
+        font-size: 22px;
+        bottom: 10px;
+       }
 }
 
 @media(max-width:579.98px){
+    /* header */
+    .logo{
+       display: none;
+    }
+    .menu.active {
+        min-width: 300px;
+        min-height: 300px;
+    }
+    .menu ul li {
+        margin-bottom: 10px;
+    }
+    .menu ul li a {
+        font-size: 14px;
+    }
+    /* footer */
+    .footer p{
+        font-size: 16px;
+        bottom: 5px;
+       }
 }
 
 /* main */
 @media(max-width:1024.98px){
-   
+    .container__title {
+        font-size: 30px;
+        max-width: 400px;
+        text-align: center;
+    }
+    /* first-screen */
+    .container__fsc {
+        flex-direction: column;
+        align-items: center;
+    }
+    .container-fsc__img {
+       margin-bottom: 30px;
+    }
+    #first-screen {
+        margin-bottom: 50px;
+    }
+    .container__fsc .btn_yellow {
+        font-size: 14px;
+        padding: 14px 30px;
+    }
+    /* about-us */
+    .container-about-us__info::after{
+        width: 80px;
+        height: 80px;
+        background-size: 80px;
+        bottom: calc(100% - 30px);
+        right: calc(50% - 140px);
+    }
+    .container-about-us__info {
+        margin-bottom: 150px;
+    }
+    .container-about-us__subtitle {
+        font-size: 18px;
+    }
+    .container-about-us__info::before {
+        top: 100px;
+    }
+    .about-us__row {
+        flex-direction: column;
+        align-items: center;
+    }
+    .about-us__item {
+        margin-bottom: 50px;
+    }
+    .about-us__item:nth-child(2) {
+        margin-top: 0px;
+    }
+    .container__about-us::after {
+        top: 100px;
+    }
 }
 
 @media(max-width:579.98px){
+    /* first-screen */
+
+
+    /* about-us */
+    .about-us__item img{
+        max-width: 170px;
+        max-height:170px;
+        width: 100%;
+        height: 100%;
+    }
+    .container__about-us::after {
+        top: 135px;
+    }
+    .container-about-us__info::before {
+        top: 120px;
+    }
+    .container-about-us__subtitle {
+        font-size: 16px;
+        max-width: 800px;
+
+    }
+    .about-us__item__title {
+        font-size: 34px;
+    }
+    .about-us__item__subtitle {
+        margin-bottom: 15px;
+        max-width: 300px;
+        font-size: 14px;
+        line-height: 20px;
+    }
 }
