--- a/assets/css/variable.css
+++ b/assets/css/variable.css
@@ -3,4 +3,7 @@
     --red:#E64648;
     --black:#000000;
     --yellow:#FFCB46;
+
+    --luntik_bold: 'luntik_bold', sans-serif;
+    --arciform: 'Arciform Sans cyr-lat Regular', sans-serif;
 }
