--- a/assets/css/variable.css
+++ b/assets/css/variable.css
@@ -3,7 +3,8 @@
     --red:#E64648;
     --black:#000000;
     --yellow:#FFCB46;
-
+    --green:#012100;
+    --grey:#b5b5b5;
     --luntik_bold: 'luntik_bold', sans-serif;
     --arciform: 'Arciform Sans cyr-lat Regular', sans-serif;
 }
