--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,6 +53,25 @@ section {
     color: var(--black);
     background: var(--yellow);
 }
+.container-books__info,
+.container-video__info {
+    position: relative;
+    margin-bottom: 70px;
+}
+
+.container-books__info::after,
+.container-catalog__info::after,
+.container-video__info::after {
+    content: '';
+    display: block;
+    width: 100px;
+    height: 56px;
+    background: url("data:image/svg+xml,%3Csvg width='206' height='42' viewBox='0 0 206 42' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3 9.5L12.9931 16.4894C21.4899 22.4323 33.1225 20.8777 39.7606 12.912V12.912C47.6025 3.50168 61.993 3.31249 70.0797 12.5134L87.3555 32.1698C95.9285 41.924 111.274 41.4238 119.194 31.132L125.062 23.5053C130.467 16.4817 141.089 16.5748 146.37 23.692V23.692C152.613 32.1064 165.672 30.3812 169.516 20.6342L172.063 14.1769C176.001 4.19063 188.021 0.207942 197.143 5.86676L203 9.5' stroke='%23E64648' stroke-width='5' stroke-linecap='round'/%3E%3C/svg%3E") center/contain no-repeat;
+    position: absolute;
+    left: 50%;
+    top: 100%;
+    transform: translate(-50%, 0);
+}
 
 /* first-screen */
 #first-screen {
@@ -92,6 +111,7 @@ section {
     animation: yaga-shadow 5s infinite;
 }
 
+.container__catalog .btn_yellow,
 .container__fsc .btn_yellow {
     font-size: 20px;
     padding: 20px 45px;
@@ -106,6 +126,7 @@ section {
     transition: 1s all ease;
     background: none;
 }
+.container__catalog .btn_yellow::before,
 .container__fsc .btn_yellow::before {
     background: var(--yellow);
     content: "";
@@ -118,6 +139,7 @@ section {
     height: 380%;
     transform: translate(-50%,-50%) rotate(45deg);
 }
+.container__catalog .btn_yellow:hover::before,
 .container__fsc .btn_yellow:hover::before {
     height: 0;
 }
@@ -244,6 +266,113 @@ section {
     height: 0;
 }
 
+/* catalog */
+#catalog {
+    margin-bottom: 100px;
+}
+.container__catalog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 100%;
+    padding: 0;
+}
+.container-catalog__info {
+    margin-bottom: 50px;
+    position: relative;
+}
+.catalog__row {
+    margin-bottom: 100px;
+}
+.catalog-img {
+    max-width: 50%;
+}
+.catalog__item img {
+    width: 100%;
+}
+.catalog__item {
+    display: flex;
+}
+.catalog__item:nth-child(2n) {
+    flex-direction: row-reverse;
+}
+.catalog-info {
+    max-width: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 12px;
+    align-items: center;
+    margin-bottom: 0;
+}
+.catalog__item__title {
+    margin-bottom: 30px;
+    font-size: 32px;
+    text-align: center;
+}
+.catalog__item__subtitle {
+    max-width: 600px;
+    font-size: 24px;
+}
+.catalog__item__subtitle ul {
+    margin-bottom: 70px;
+}
+.catalog__item__subtitle ul li {
+    text-align: left;
+    max-width: 600px;
+    font-size: 26px;
+    margin-bottom: 15px;
+}
+.catalog__item__subtitle p {
+    text-align: center;
+    max-width: 600px;
+    font-size: 18px;
+    opacity: 0.7;
+    position: relative;
+    margin-bottom: 30px;
+}
+.catalog__item__subtitle p::before {
+    content: '';
+    display: block;
+    width: 100px;
+    height: 3px;
+    background-color: var(--red);
+    position: absolute;
+    left: 50%;
+    top: calc(0% - 20px);
+    transform: translate(-50%, 0);
+}
+.buttons-unit {
+    margin-bottom: 50px;
+    margin-right: -30px;
+}
+.btn_unit {
+    cursor: pointer;
+    margin-right: 30px;
+    border: none;
+    background-color: var(--white);
+    transition: 0.5s;
+    box-shadow: 0 0 10px var(--grey);
+    border-radius: 50px;
+    padding: 15px 22px;
+    font-size: 18px;
+    color: var(--black);
+
+}
+.btn_unit:hover {
+    background-color: var(--yellow);
+    transition: 0.5s;
+}
+.catalog-price {
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+.container__catalog .btn_yellow {
+    display: inline-block;
+}
+
 /* faq */
 .container-faq__info {
     margin-bottom: 50px;
@@ -290,9 +419,6 @@ section {
 }
 
 /* books */
-.container-books__info {
-    margin-bottom: 50px;
-}
 .books__row {
     margin: 0 auto;
     display: grid;
@@ -351,86 +477,85 @@ section {
 }
 
 /* delivery */
-.container__delivery{
+.container__delivery {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.container-delivery__info{
+.container-delivery__info {
     margin-bottom: 50px;
 }
 .deliverys__row {
     display: flex;
     align-items: center;
     margin-right: -20px;
+    padding: 12px;
 }
 .devilerys__item {
-    padding: 12px;
-width: 400px;
-height: 400px;
-border-radius: 50px;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-box-shadow: 0 0 20px 0px var(--grey);
-position: relative;
-transform: scale(1);
+    padding: 100px 50px;
+    max-width: 350px;
+    width: 100%;
+    max-height: 350px;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 20px 0 var(--grey);
+    position: relative;
+    transform: scale(1);
     transition: 0.5s;
     margin-right: 20px;
 }
 .devilerys__item:first-child,
-.devilerys__item:last-child{
-    padding: 12px;
-width: 350px;
-height: 350px;
+.devilerys__item:last-child {
+    padding: 70px 20px;
+    max-width: 300px;
+    width: 100%;
+    max-height: 300px;
 }
 .devilerys__item:first-child:hover,
-.devilerys__item:last-child:hover{
+.devilerys__item:last-child:hover {
     transform: scale(1.1);
     transition: 0.5s;
 }
 .delivery-item__title {
     font-size: 32px;
-line-height: 40px;
-text-align: center;
-color: var(--white);
-margin-bottom: 20px;
+    line-height: 40px;
+    text-align: center;
+    color: var(--white);
+    margin-bottom: 20px;
 
 }
 .delivery-item__description {
     font-size: 24px;
-line-height: 28px;
-text-align: center;
-color: var(--white);
+    line-height: 28px;
+    text-align: center;
+    color: var(--white);
     max-width: 350px;
 }
 .delivery-item__title::last-child,
 .delivery-item__title::last-child {
-    font-size: 26px;
-line-height: 57px;
-text-align: center;
-color: var(--white);
+    font-size: 24px;
+    line-height: 57px;
+    text-align: center;
+    color: var(--white);
 
 }
 .delivery-item__description:first-child,
-.delivery-item__description:last-child
-{
-    font-size: 18px;
-line-height: 24px;
-text-align: center;
-color: var(--white);
+.delivery-item__description:last-child {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: var(--white);
     max-width: 350px;
 }
 
 /* video */
-.container__video{
+.container__video {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-.container-video__info{
-    margin-bottom: 50px;
 }
 .video__row {
     display: grid;
@@ -447,20 +572,18 @@ color: var(--white);
     border-radius: 20px;
     margin-bottom: 20px;
     margin-right: 20px;
-   
 }
-
 .video-item__title {
     font-size: 18px;
-line-height: 21px;
-color: var(--white);
+    line-height: 21px;
+    color: var(--white);
     max-height: 165px;
     height: 100%;
 }
 .container__video .btn_yellow {
     padding: 10px 40px;
     margin-left: auto;
-    margin-right: 0px;
+    margin-right: 0;
     transform: scale(1);
     transition: 0.5s;
 }
@@ -469,70 +592,80 @@ color: var(--white);
     transition: 0.5s;
 }
 
-
 /* pays */
-.container__pay{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.container-pay__info{
+.container-pay__info {
     margin-bottom: 50px;
 }
-.pays__row {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 60px;
+.container-pay__title {
+    max-width: 800px;
 }
-.pays__item {
+.pay__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.steps-container {
+    position: relative;
+    z-index: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--white);
+    box-shadow: 0 0 10px var(--grey);
+    padding: 75px 35px;
+    border-radius: 50px;
 }
-.pays__item img{
-    margin-bottom: 15px;
+.step {
+    display:flex;
+    flex-direction:column;
+    align-items: center;
 }
-.pay-item__title {
-    font-size: 30px;
-line-height: 35px;
-text-align: center;
-color: var(--black);
-margin-bottom: 15px;
+.step__info {
+    margin-bottom: 5px;
 }
-.pay-item__description {
-    max-width: 315px;
+.step__info:last-child {
+    margin-bottom: 60px;
+}
+.step__title {
+    margin-bottom: 20px;
+    font-size: 26px;
+    line-height: 31px;
+    text-align: center;
     color: var(--black);
-    font-size: 20px;
-line-height: 24px;
-text-align: center;
 }
-.container__pay .btn_yellow {
+.step__subtitle {
     font-size: 20px;
-    padding: 20px 45px;
-    animation-iteration-count: 5;
-    animation-duration: 1.5s;
-    position: relative;
-    display: block;
+    line-height: 19px;
+    text-align: center;
     color: var(--black);
-    border: 2px solid var(--yellow);
-    text-transform: uppercase;
-    overflow: hidden;
-    transition: 1s all ease;
-    background: none;
+    max-width: 350px;
 }
-.container__pay .btn_yellow::before {
-    background: var(--yellow);
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    z-index: -1;
-    transition: all 0.6s ease;
+.steps-container .btn_yellow {
+    padding: 15px 30px;
+    font-size: 20px;
+    transform: scale(1);
+    transition: 0.5s;
+}
+.steps-container .btn_yellow:hover {
+    transform: scale(1.1);
+    transition: 0.5s;
+
+}
+.step__arrow {
+    max-width: 75px;
+    max-height: 75px;
+}
+.step__arrow img{
     width: 100%;
-    height: 380%;
-    transform: translate(-50%,-50%) rotate(45deg);
+    height: 100%;
 }
-.container__pay .btn_yellow:hover::before {
-    height: 0;
+
+.pay-img {
+    position: relative;
+    z-index: 1;
+    margin-left: -50px;
+    max-width: 630px;
+}
+.pay-img img {
+    width: 100%;
 }
