--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -99,6 +99,40 @@
     .container__about-us::after {
         top: 100px;
     }
+    /* catalog */
+    .catalog__row{
+        margin-bottom: 30px;
+    }
+    .catalog__item {
+        flex-direction: column;
+        align-items: center;
+    }
+    .catalog__item:nth-child(2n){
+        flex-direction: column;
+    }
+    .catalog-img{
+        max-width: 100%;
+        margin-bottom: 30px;
+    }
+    .catalog-info {
+        max-width: 100%;
+    }
+    .catalog__item__title {
+        font-size: 26px;
+    }
+    .catalog__item__subtitle ul{
+        margin-bottom: 50px;
+    }
+    .catalog__item__subtitle ul li {
+        font-size: 20px;
+    }
+    .buttons-unit{
+        margin-right: -20px;
+    }
+    .btn_unit{
+        margin-right: 20px;
+    }
+
     /* faq */
     /* faq */
     .accordion__item .accordion__title {
@@ -112,6 +146,135 @@
     font-size: 20px;
     line-height: 27px;
     }
+    .accordion__item .accordion__title .accordion__arrow {
+        width: 20px;
+        height: 10px;
+    
+    }
+
+    /* books */
+    .books__row {
+        margin: 0 auto;
+       display: flex;
+       flex-direction: column;
+    }
+    .books__item {
+        max-width: 800px;
+        max-height: 300px;
+        width: 100%;
+        height: 100%;
+    }
+    .books-item__image img {
+        width: 300px;
+        height: 300px;
+        border-radius: 20px 0 0 20px;
+    }
+    .books-item__author {
+        font-size: 16px;
+        line-height: 19px;
+        color: var(--black);
+        margin-bottom: 100px;
+    }
+
+    /* delivery */
+    .deliverys__row {
+        flex-direction: column;
+    }
+    .deliverys__row {
+        display: flex;
+        align-items: center;
+        margin-right: 0px;
+        margin-bottom: -20px;
+    }
+    .devilerys__item {
+        padding: 100px 150px;
+    max-width: 750px;
+    width: 100%;
+    min-height: 350px;
+        margin-right: 0px;
+        margin-bottom: 20px;
+    }
+    .devilerys__item:first-child,
+.devilerys__item:last-child{
+    padding: 100px 150px;
+    max-width: 750px;
+    width: 100%;
+    min-height: 350px;
+        margin-right: 0px;
+}
+    .delivery-item__title {
+        font-size: 24px;
+    line-height: 40px;
+    max-width: 650px;
+    
+    }
+    .delivery-item__description {
+        font-size: 16px;
+    line-height: 24px;
+        max-width: 650px;
+    }
+    .delivery-item__title::last-child,
+    .delivery-item__title::last-child {
+        font-size: 24px;
+    line-height: 40px;
+    max-width: 650px;
+    
+    }
+    .delivery-item__description:first-child,
+    .delivery-item__description:last-child
+    {
+        font-size: 16px;
+    line-height: 24px;
+     max-width: 350px;
+    }
+    .devilerys__item:first-child:hover,
+.devilerys__item:last-child:hover{
+    transform: scale(1);
+    transition: 0.5s;
+}
+    /* video */
+    .video__row {
+        display: flex;
+        flex-direction: column;
+    }
+    .video__item {
+        max-width: 750px;
+        height: 250px;
+        margin-right: 0px;
+    }
+     .video__row {
+        margin-right:0px;
+    } 
+    
+    /* pay */
+    .pay__wrapper {
+        flex-direction: column-reverse;
+    }
+    .pay-img {
+        margin-left: 0px;
+        max-width: 400px;
+        margin-bottom:-50px;
+    }
+    .steps-container {
+        padding: 75px 105px;
+        border-radius: 50px;
+    }
+    .step__title {
+        font-size: 30px;
+        line-height: 34px;
+    }
+    .step__subtitle {
+        font-size: 22px;
+        line-height: 26px;
+    }
+    .step__arrow {
+        max-width: 100px;
+        max-height: 100px;
+    }
+    .steps-container .btn_yellow {
+        font-size: 24px;
+    }
+
 }
 
 @media(max-width:579.98px){
@@ -164,6 +327,115 @@
     .accordion__item .accordion__content {
     font-size: 14px;
     line-height: 27px;
+    }
+    .books__row {
+        margin: 0 auto;
+       display: flex;
+       flex-direction: column;
+    }
+    .books__item {
+        max-width: 800px;
+        max-height: 170px;
+        width: 100%;
+        height: 100%;
+    }
+    .books-item__image img {
+        width: 150px;
+        height: 170px;
+        border-radius: 20px 0 0 20px;
+    }
+    .books-item__info {
+        padding: 14px 38px 14px 20px;
+    }
+    .books-item__title {
+        font-size: 12px;
+        line-height: 20px;
+        margin-bottom: 10px;
+    }
+    .books-item__author {
+        font-size: 10px;
+    line-height: 12px;
+        margin-bottom:30px;
+    }
+    .books-item__info .btn_yellow {
+        font-size: 12px;
+        line-height: 15px;
+        padding: 10px 30px;
+    }
+    /* delivery */
+    .devilerys__item {
+        padding: 100px 20px;
+    max-width: 350px;
+    width: 100%;
+    min-height: 350px;
+        margin-right: 0px;
+        margin-bottom: 20px;
+    }
+    .devilerys__item:first-child,
+.devilerys__item:last-child{
+    padding: 100px 20px;
+    max-width: 350px;
+    width: 100%;
+    min-height: 350px;
+        margin-right: 0px;
+}
+    .delivery-item__title {
+        font-size: 20px;
+    line-height: 30px;
+    
+    }
+    .delivery-item__description {
+        font-size: 14px;
+    line-height: 24px;
+        max-width:350px;
+    }
+    .delivery-item__title::last-child,
+    .delivery-item__title::last-child {
+        font-size: 20px;
+    line-height: 30px;
+    max-width: 350px;
+    
+    }
+    .delivery-item__description:first-child,
+    .delivery-item__description:last-child
+    {
+        font-size: 14px;
+    line-height: 24px;
+     max-width: 350px;
+    }
+    /* video */
+    .video__row {
+        margin-right:0px;
+    }
+    .video__item {
+        margin-right: 0px;
+    }
+    /* pay */
+    .pay__wrapper {
+        flex-direction: column-reverse;
+    }
+    .pay-img {
+        margin-left: 0px;
+        max-width: 300px;
+        margin-bottom:-50px;
+    }
+    .steps-container {
+        padding: 75px 45px;
+    }
+    .step__title {
+        font-size: 26px;
+    line-height: 31px;
+    }
+    .step__subtitle {
+        font-size: 20px;
+    line-height: 22px;
+    }
+    .step__arrow {
+        max-width: 100px;
+        max-height: 100px;
+    }
+    .steps-container .btn_yellow {
+        font-size: 16px;
     }
 }
 
